--- a/src/components/Content/Content.module.scss
+++ b/src/components/Content/Content.module.scss
@@ -1657,10 +1657,13 @@
       position: absolute;
       top: 10%;
       right: 5%;
-
       transition: all 250ms ease-in-out;
       &:hover {
-        transform: scale(1.03);
+        transform: scale(4);
+        transform-origin: center;
+        border: 1px solid #efc074;
+        border-radius: 10px;
+        z-index: 3;
       }
     }
     .imgCadets2 {
@@ -1768,7 +1771,6 @@
       position: absolute;
       bottom: 3%;
       left: -7%;
-
       transition: all 250ms ease-in-out;
       &:hover {
         z-index: 3;
@@ -1807,6 +1809,8 @@
       &:hover {
         transform: scale(2.5);
         transform-origin: center;
+        border-radius: 10px;
+        border: 1px solid #efc074;
         z-index: 3;
       }
     }
@@ -1817,11 +1821,12 @@
       position: absolute;
       top: -10%;
       left: 40%;
-
       transition: all 250ms ease-in-out;
       &:hover {
         transform: scale(2);
         transform-origin: center right;
+        border: 1px solid #efc074;
+        border-radius: 10px;
         z-index: 3;
       }
     }
@@ -1837,6 +1842,8 @@
       &:hover {
         transform: scale(2.5);
         transform-origin: center;
+        border: 1px solid #efc074;
+        border-radius: 10px;
         z-index: 3;
       }
     }
