--- a/src/components/Content/Content.module.scss
+++ b/src/components/Content/Content.module.scss
@@ -165,7 +165,11 @@
       width: 150px;
       height: 214px;
       &:hover {
-        transform: scale(1.03);
+        transform: scale(3);
+        transform-origin: bottom left;
+        z-index: 3;
+        border: 1px solid #e9cd67;
+        border-radius: 10px;
       }
     }
     .imgTown {
@@ -241,13 +245,16 @@
       height: 214px;
       position: absolute;
       overflow: hidden;
-
       cursor: pointer;
       top: 35%;
       left: 23%;
       transition: all 250ms ease-in-out;
       &:hover {
-        transform: scale(1.03);
+        transform: scale(3);
+        transform-origin: bottom left;
+        z-index: 3;
+        border: 1px solid #efc074;
+        border-radius: 10px;
       }
     }
   }
@@ -1557,15 +1564,18 @@
     }
     .imgZdan2 {
       width: 600px;
-      height: 205px;
+      height: 210px;
       cursor: pointer;
       position: absolute;
       bottom: 5%;
       left: 13%;
       transition: all 250ms ease-in-out;
       &:hover {
-        transform: scale(1.03);
-        border: 1px solid #41403d;
+        transform: scale(2);
+        border: 1px solid #e9cd67;
+        border-radius: 10px;
+        transform-origin: bottom;
+        z-index: 3;
       }
     }
     .imgFlag {
