--- a/src/components/Content/Content.module.scss
+++ b/src/components/Content/Content.module.scss
@@ -61,9 +61,10 @@
         width: 650px;
         height: 100%;
         right: 3%;
-        border: 2px solid #efc074;
+        border: 2px solid #000;
         border-radius: 15px;
         overflow-y: scroll;
+        background-color: #fff;
       }
 
       .descriptionImage {
