--- a/src/components/Content/Content.module.scss
+++ b/src/components/Content/Content.module.scss
@@ -304,18 +304,72 @@
     width: 613px;
     height: 650px;
     bottom: 0%;
-    .imgMap {
-      width: 400px;
-      height: 281px;
+    .imgMap1 {
+      width: 180px;
+      height: 140px;
       overflow: hidden;
       cursor: pointer;
       transition: all 250ms ease-in-out;
       position: absolute;
-
-      top: 28.5%;
-      left: -13%;
+      top: 50%;
+      left: -10%;
       &:hover {
-        transform: scale(1.03);
+        transform: scale(6.5);
+        transform-origin: center bottom;
+        z-index: 4;
+        border: 1px solid #efc074;
+        border-radius: 5px;
+      }
+    }
+    .imgMap2 {
+      width: 180px;
+      height: 140px;
+      overflow: hidden;
+      cursor: pointer;
+      transition: all 250ms ease-in-out;
+      position: absolute;
+      top: 28%;
+      left: 23%;
+      &:hover {
+        transform: scale(6.5);
+        transform-origin: center bottom;
+        z-index: 4;
+        border: 1px solid #efc074;
+        border-radius: 5px;
+      }
+    }
+    .imgMap3 {
+      width: 180px;
+      height: 140px;
+      overflow: hidden;
+      cursor: pointer;
+      transition: all 250ms ease-in-out;
+      position: absolute;
+      top: 50%;
+      left: 23%;
+      &:hover {
+        transform: scale(6.5);
+        transform-origin: center bottom;
+        z-index: 4;
+        border: 1px solid #efc074;
+        border-radius: 5px;
+      }
+    }
+    .imgMap4 {
+      width: 180px;
+      height: 140px;
+      overflow: hidden;
+      cursor: pointer;
+      transition: all 250ms ease-in-out;
+      position: absolute;
+      top: 28%;
+      left: -10%;
+      &:hover {
+        transform: scale(6.5);
+        transform-origin: center bottom;
+        z-index: 4;
+        border: 1px solid #efc074;
+        border-radius: 5px;
       }
     }
     .Text {
@@ -1353,7 +1407,6 @@
       position: absolute;
       top: 31%;
       left: 31%;
-
       transition: all 250ms ease-in-out;
       &:hover {
         transform: scale(1.03);
