--- a/src/components/Slider/Slider.module.scss
+++ b/src/components/Slider/Slider.module.scss
@@ -1,3 +1,47 @@
 @import "slick-carousel/slick/slick.css";
 @import "slick-carousel/slick/slick-theme.css";
 
+.modal {
+  z-index: 1000;
+  height: 1250px;
+  width: 1680px;
+  background-color: rgba(0, 0, 0, 0);
+  position: absolute;
+  top: 0;
+  left: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  opacity: 0;
+  pointer-events: none;
+  transition: all 270ms ease-in-out;
+}
+
+.modal.active {
+  pointer-events: all;
+  opacity: 1;
+}
+
+.content {
+  position: relative;
+  z-index: 2;
+  padding: 40px 30px;
+  border-radius: 12px;
+  border: 3px solid #e8b769;
+  background-color: #eeecda;
+  opacity: 0;
+  transition: all 250ms ease-in-out;
+
+  .button_close {
+    cursor: pointer;
+    width: 27px;
+    height: 27px;
+    position: absolute;
+    top: 12px;
+    right: 13px;
+  }
+}
+
+.content.active {
+  opacity: 1;
+}
